# squaredle_spanish

./: .gitignore  Dockerfile  README.md  Spanish.txt  Spanish_full.txt  app.js  clean.py  daily_puzzle.json  daily_solution.json  docker-compose.yml  generate_puzzle.py  index.html  pyproject.toml  style.css  test.py
alembic/: env.py
alembic/versions/: 0b450b7b4a08_add_bonus_column.py  107dc8861149_add_players.py  836b926e7463_add_bonus_score_to_session.py  a88e67692bc6_initial_schema.py
frontend/: Dockerfile  Dockerfile.dev  config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/css/: style.css
frontend/js/: animation.js  api.js  app.js  appold.js  audio.js  board.js  control.js  foundWords.js  gameInit.js  leaderboard.js  progressUI.js  selection.js  state.js  tooltip.js  username.js  wordSubmission.js
frontend/src/: app.ts  config.ts
frontend/src/audio/: audio.ts  control.ts
frontend/src/game/: board.ts  boardExhaustion.ts  boardHints.ts  gameInit.ts  selection.ts  state.ts  username.ts  wordSubmission.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts  game.ts
frontend/src/ui/: animation.ts  foundWords.ts  leaderboard.ts  progressUI.ts  (+2 more)
src/: main.py
src/data/: Spanish.txt
src/db/: create_tables.py  database.py  models.py
src/scripts/: batch_generate_and_import.py  generate_puzzle.py  import_puzzle.py  test_service.py  test_zipf.py
src/services/: puzzle_service.py  rae_service.py
src/utils/: normalize.py
test_puzzles/1_word_puzzle/: daily_puzzle.json  daily_solution.json
(+1 files in other folders)
