[project]
name = "squaredle-es"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.23",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.35.0",
    "wordfreq>=3.1.1",
]
[tool.fastapi]
entrypoint = "src.main:app"
